<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AddActivityBackground"
    tools:context=".Activities.LoginActivity.LoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/log_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autorisation_title"
                android:textSize="50sp"
                style="@style/TextColorTwo"
                android:textAlignment="center"
                />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_title_tv"
            android:orientation="vertical"
            android:layout_marginTop="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/AddActivityBackground">


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/log_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    app:boxStrokeColor="@color/orange"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/log_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        style="@style/EditBox"
                        android:drawableStart="@drawable/ic_mail"
                        android:textAlignment="center"/>

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/log_password_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/log_email_title"
                    app:boxStrokeColor="@color/orange"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/log_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        style="@style/EditBox"
                        android:drawableStart="@drawable/ic_lock"
                        android:textAlignment="center"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/log_help_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/log_password_title"
                android:text="@string/log_help"
                android:textAlignment="center"
                style="@style/TextColorTwo"
                android:textSize="16sp"
                android:layout_marginTop="42dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_login_btn"
                style="@android:style/Widget.Button"
                android:layout_below="@+id/log_help_tv"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/orange_button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/init_sesion" />

            <TextView
                android:id="@+id/log_help_tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_title_two"
                style="@style/TextColorTwo"
                android:layout_below="@+id/log_login_btn"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/log_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/log_help_tv_2"
                android:text="@string/log_register_tile"
                style="@style/TextColorTwo"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>