<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/IntroActivityCardBackground"
    tools:context=".Activities.LoginActivity.IntroActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/intro_pic" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:src="@drawable/gradient_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation_title_one"
                    style="@style/TextColorTwo"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_below="@id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation_title_two"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_below="@id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation_title_three"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    style="@style/TextColorTwo"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation_description"
                    android:textSize="16sp"
                    style="@style/TextColorTwo"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getInBtn"
                    style="@android:style/Widget.Button"
                    android:layout_below="@+id/textView5"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_button"
                    android:background="@drawable/orange_button_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>