<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AddActivityBackground"
    tools:context=".Activities.AddActivity.AddChapterActivity">

    <include
        layout="@layout/toolbar_back" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_back"
        android:layout_above="@+id/add_genre_btn"
        android:padding="32dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AddActivityBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_chapter_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chapter_add_title"
                android:textSize="25sp"
                style="@style/TextColorTwo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/add_chapter_title_tv"
                android:orientation="vertical"
                style="@style/AddActivityBackground">


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/add_chapter_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    app:boxStrokeColor="@color/orange"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/add_chapter_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        style="@style/EditBox"
                        android:drawableStart="@drawable/ic_genre"
                        android:drawablePadding="15dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/add_chapter_frontpage_click_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chapter_add_archive"
                    android:layout_below="@+id/add_chapter_name_title"
                    android:layout_marginTop="42dp"
                    android:layout_marginStart="52dp"
                    android:textStyle="bold"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_chapter_btn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_genre_frontpage_click_tv"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/add_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>