<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AddActivityBackground"
    tools:context=".Activities.LoginActivity.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_password_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="50sp"
                style="@style/TextColorTwo"
                android:textAlignment="center"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_title_tv"
                android:orientation="vertical"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                style="@style/AddActivityBackground">


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/forgot_password_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:boxStrokeColor="@color/orange"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/forgot_password_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        style="@style/EditBox"
                        android:drawableStart="@drawable/ic_mail"
                        android:textAlignment="center"/>

                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:id="@+id/forgot_password_help_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgot_password_email_title"
                    android:text="@string/aviso"
                    android:textAlignment="center"
                    style="@style/TextColorTwo"
                    android:textSize="16sp"
                    android:layout_marginTop="42dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgot_password_btn"
                    style="@android:style/Widget.Button"
                    android:layout_below="@+id/forgot_password_help_tv"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/orange_button_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/send" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>